Feat: Created User logic with HTTP created
